# LookUP

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
data/processed/: data_limpio.csv
data/reports/: error_report.txt
src/: Limpiar_ventas.py  config.py  csv_to_supabase.py  db.py  main.py
src/extractors/: csv_to_supabase.py  remote_extractor.py
src/processors/: cleaner.py  transformer.py  validator.py
